Correction overflow sur mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -139,7 +139,7 @@ body {
         flex-direction: column !important;
 
         & > card {
-            height: 50vh !important;
+            height: 50% !important;
         }
 
         & h1 {
@@ -154,10 +154,10 @@ body {
     flex-direction: row;
     padding: 0.25rem;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 
     & > a {
-        height: 100vh;
+        height: 100%;
         width: 100%;
         background: #232323;
         border: 4px solid var(--background-color);
@@ -177,7 +177,7 @@ body {
                 position: absolute;
                 height: 100%;
                 width: 100%;
-                inset: 0px;
+                inset: 0;
                 color: transparent;
                 opacity: .6;
                 object-fit: cover;
